@startuml Factory

Factory *- Product
Factory <|-- IDCardFactory
Product <|-- IDCard



abstract class Factory
{
   + explicit Factory()
   + virtual ~Factory()
   |||
   - {abstract} virtual std::unique_ptr<Product> create(const std::string&)
}

class IDCardFactory
{
   + explicit IDCardFactory()
   + virtual ~IDCardFactory()
   |||
   + std::unique_ptr<Product> create(const std::string&) override
}



abstract class Product
{
   # const std::string owner_

   + explicit Product(const std::string&)
   + virtual ~Product()
   |||
   + {abstract} virtual void use()
}

class IDCard
{
   + explicit IDCard(const std::string&)
   + virtual ~IDCard()
   |||
   + void use() override
}

@enduml
